# bga-tracker

./: .gitignore  CLAUDE.md  README.md  manifest.json  package-lock.json  package.json  pyproject.toml  requirements.txt  sidepanel.html  vite.config.ts
.claude/skills/commit-ralphex/: SKILL.md
.claude/skills/innovation-debug/: SKILL.md
assets/: card_info.json
data/: cardinfo.json
docs/: _config.yml  data-flow.md  index.md
docs/pages/: azul.md  crew.md  data-flow.md  development.md  innovation.md  privacy.md
docs/plans/: 2026-03-18-local-pipeline-cli.md
extension/: background.js  extract.js  manifest.json
scripts/: browse.py  cmd.sh  download_assets.py  download_echoes_assets.py  fetch_full_history.js  game-state.ts  package.ts
scripts/innovation/: card.py  download_assets.py  extract_log.js  format_state.py  game_state.py  state_tracker.py  track_state.py
src/: background.ts  extract.ts  pipeline.ts
src/__tests__/: background.test.ts  extract.test.ts  game_state.test.ts  process_log.test.ts  sidepanel.test.ts  sidepanel_ui.test.ts  smoke.test.ts  types.test.ts
src/azul/: render.ts
src/browser/: browse.py
src/engine/: game_state.ts  process_log.ts
src/innovation/: game_state.ts  render.ts
src/models/: types.ts
src/render/: config.ts  help.ts  icons.ts  summary.ts  toggle.ts
src/sidepanel/: settings.ts  sidepanel.css  sidepanel.ts
templates/innovation/: summary.html.j2
tests/: test_opponent_knowledge.py  test_regression.py
tests/innovation/: test_cli.py  test_opponent_knowledge.py  test_regression.py  test_server.py
(+65 files in other folders)
