[project]
name = "bga-tracker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["playwright"]

[project.optional-dependencies]
assets = ["Pillow"]  # only needed for download_assets.py (one-time sprite extraction)

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
